Join.js Text Alignment. (Full Screen Bug not Fixed)

--- a/src/Home.css
+++ b/src/Home.css
@@ -26,7 +26,7 @@
 .my-text-biggest {
   font-family: Calibri;
   font-size: 60px;
-  color: rgb(194, 193, 193);
+  color: #ffffff;
   -webkit-text-stroke-width: 1px;
 }
 
